<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:gravity="center">

        <android.widget.Button
            android:id="@+id/scan_qr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr"
            android:background="@drawable/text_button"
            android:layout_marginBottom="10dp"/>

        <android.widget.Button
            android:id="@+id/load_qr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_qr_image"
            android:background="@drawable/text_button"
            android:layout_marginBottom="10dp"/>

        <android.widget.Button
            android:id="@+id/game_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_history"
            android:background="@drawable/text_button"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:textSize="10sp"
        android:gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/qr_scan_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <android.widget.Button
            android:id="@+id/qr_scan_cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.90"
            android:background="@drawable/text_button"
            android:elevation="2dp"
            android:text="@string/cancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>