<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:theme="@style/Theme.QrGame.Dialog.Title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.QrGame.Dialog.Content">

        <TextView
            android:id="@+id/error_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Error"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="end">

            <android.widget.Button
                android:id="@+id/show_stack_trace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_button"
                android:text="@string/show_stack_trace"
                android:layout_marginBottom="10dp"/>

            <android.widget.Button
                android:id="@+id/error_close_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_button"
                android:text="@string/close_game"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>