<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:theme="@style/Theme.QrGame.Dialog.Title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.QrGame.Dialog.Content">

        <TextView
            android:id="@+id/delete_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="end">

            <android.widget.Button
                android:id="@+id/delete_dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_button"
                android:text="@string/delete"
                android:layout_marginEnd="10dp"/>

            <android.widget.Button
                android:id="@+id/delete_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_button"
                android:text="@string/cancel"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>