<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    tools:ignore="RtlHardcoded, ContentDescription"
    android:id="@+id/root_layout">

    <TextView
        android:id="@+id/game_any_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any_button_to_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/text_button_default"
        android:elevation="2dp"/>

    <ImageButton
        android:id="@+id/game_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back_30"
        android:background="@null"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/left_buttons"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/gl_surface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/left_buttons_inner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/score_capital"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/score_holder"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/left_buttons_inner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:rotation="45"
            android:scaleY="1.3"
            android:scaleX="1.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/left_top_button"
                    android:background="@drawable/game_button"
                    android:layout_margin="2dp"
                    android:rotation="180"/>

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/left_right_button"
                    android:background="@drawable/game_button"
                    android:layout_margin="2dp"
                    android:rotation="-90"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/left_left_button"
                    android:background="@drawable/game_button"
                    android:layout_margin="2dp"
                    android:rotation="90"/>

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:id="@+id/left_bot_button"
                    android:background="@drawable/game_button" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <se.lindhen.qrgame.GameGLSurfaceView
        android:id="@+id/gl_surface"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toRightOf="@+id/left_buttons"
        app:layout_constraintRight_toLeftOf="@id/right_buttons"
        app:layout_constraintTop_toTopOf="parent">

    </se.lindhen.qrgame.GameGLSurfaceView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/right_buttons"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/gl_surface"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/right_buttons_inner"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/high_score_capital"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/high_score_holder"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/right_buttons_inner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:rotation="45"
            android:scaleY="1.3"
            android:scaleX="1.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/right_top_button"
                    android:background="@drawable/game_button"
                    android:layout_margin="2dp"
                    android:rotation="180"/>

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/right_right_button"
                    android:background="@drawable/game_button"
                    android:layout_margin="2dp"
                    android:rotation="-90"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/right_left_button"
                    android:background="@drawable/game_button"
                    android:layout_margin="2dp"
                    android:rotation="90"/>

                <android.widget.Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:id="@+id/right_bot_button"
                    android:background="@drawable/game_button" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>